--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyTelegramBotAPI==4.15.4
-yt-dlp==2024.7.23
-google-generativeai==0.5.2
-python-dotenv==1.0.0
+pyTelegramBotAPI>=4.15.0
+yt-dlp>=2024.11.11
+google-generativeai>=0.5.0
+python-dotenv>=1.0.0
