--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pyTelegramBotAPI>=4.15.0
-yt-dlp>=2024.11.11
-google-generativeai>=0.5.0
-python-dotenv>=1.0.0
+pyrogram==2.0.106
+tgcrypto==1.2.5
+python-dotenv==1.0.0
+yt-dlp==2023.11.14
+requests==2.31.0
